--- a/appveyor.yml
+++ b/appveyor.yml
@@ -72,8 +72,9 @@ init:
   - echo %GENERATOR%
 
 install:
-  # Install SWIG using chocolatey
-  - choco install swig
+  - 7z -version
+  # Install SWIG using nuget
+  - nuget install swig
   - swig -version
   # `C:\Python27` (x86) is default on path for `python` command
   - python --version
