--- a/appveyor.yml
+++ b/appveyor.yml
@@ -55,7 +55,7 @@ before_build:
 
 build_script:
   - cmake --build . --config Release
-  - python -m setup.py build sdist bdist_wheel
+  - python ./setup.py build sdist bdist_wheel
 
 before_test:
   - cd %SWMM_HOME%
