--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,12 +20,14 @@ environment:
       BOOST_ROOT: "C:/Libraries/boost_1_67_0"
       PLATFORM: "win32"
       REF_BUILD_ID: "323_1"
+      PYTHON: 'C:\Python34'
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
       GENERATOR: "Visual Studio 15 2017 Win64"
       GROUP: "EXPERIMENTAL"
       BOOST_ROOT: "C:/Libraries/boost_1_67_0"
       PLATFORM: "win64"
       REF_BUILD_ID: "323_2"
+      PYTHON: 'C:\Python34-x64'
 
 init:
   - set SUT_BUILD_ID=%APPVEYOR_BUILD_NUMBER%_%APPVEYOR_JOB_NUMBER%
@@ -42,8 +44,8 @@ init:
 
 install:
   # Install nrtest and dependencies for regression tests
-  - python -m pip install -r tools\requirements-appveyor.txt
-  - python -m pip install scikit-build
+  - %PYTHON% -m pip install -r tools\requirements-appveyor.txt
+  - %PYTHON% -m pip install scikit-build
 
 before_build:
   - mkdir %BUILD_HOME%
@@ -56,7 +58,7 @@ before_build:
 build_script:
   - cmake --build . --config Release
   - cd %SWMM_HOME%
-  - python setup.py build sdist bdist_wheel
+  - %PYTHON% setup.py build sdist bdist_wheel
 
 before_test:
   - cd %SWMM_HOME%
