--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,12 @@ matrix:
           os: osx
           osx_image: xcode10
           language: generic
-        - name: 'manylinux2010'
-          sudo: required
-          services:
-            - docker
-          env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
-               PLAT=manylinux2010_x86_64
-
-
+        # - name: 'manylinux2010'
+        #   sudo: required
+        #   services:
+        #     - docker
+        #   env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
+        #        PLAT=manylinux2010_x86_64
 
 
 #compiler:
@@ -43,9 +41,9 @@ before_install:
       sudo apt-get install -y libboost-test-dev ;
       sudo apt-get install -y swig ;
     fi
-  - if [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
-      docker pull $DOCKER_IMAGE;
-    fi
+  # - if [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
+  #     docker pull $DOCKER_IMAGE;
+  #   fi
 
 #install:
 
@@ -63,23 +61,23 @@ script:
   - if [[ "$TRAVIS_JOB_NAME" == "osx" ]]; then
       cmake ../ -DBUILD_TESTS=ON .. ;
     fi
-  - if ! [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
-      cmake --build .;
-      # run unit tests
-      cd tests;
-      ctest;
-      cd $SWMM_HOME;
-    fi
+  # - if ! [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
+  #     cmake --build .;
+  #     # run unit tests
+  #     cd tests;
+  #     ctest;
+  #     cd $SWMM_HOME;
+  #   fi
   - if [[ "$TRAVIS_JOB_NAME" == "linux" ]]; then
       pip install --src build/packages -r tools/requirements.txt ;
       tools/before-test.sh $TEST_HOME $SWMM_HOME/$BUILD_HOME/bin $TRAVIS_COMMIT ;
       tools/run-nrtest.sh -c -t $TEST_HOME -v $TRAVIS_COMMIT ;
     fi
   - cd $SWMM_HOME
-  - if [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
-      docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/tools/build-wheels.sh
-      ls wheelhouse/
-    fi
+  # - if [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
+  #     docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/tools/build-wheels.sh
+  #     ls wheelhouse/
+  #   fi
   
 deploy:
   provider: releases
