--- a/.travis.yml
+++ b/.travis.yml
@@ -61,13 +61,13 @@ script:
   - if [[ "$TRAVIS_JOB_NAME" == "osx" ]]; then
       cmake ../ -DBUILD_TESTS=ON .. ;
     fi
-  # - if ! [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
-  #     cmake --build .;
-  #     # run unit tests
-  #     cd tests;
-  #     ctest;
-  #     cd $SWMM_HOME;
-  #   fi
+  - if ! [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
+      cmake --build .;
+      # run unit tests
+      cd tests;
+      ctest;
+      cd $SWMM_HOME;
+    fi
   - if [[ "$TRAVIS_JOB_NAME" == "linux" ]]; then
       pip install --src build/packages -r tools/requirements.txt ;
       tools/before-test.sh $TEST_HOME $SWMM_HOME/$BUILD_HOME/bin $TRAVIS_COMMIT ;
