--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,47 @@ matrix:
     - os: 'linux'
       name: linux
       python: 3.6
+      before_install:
+        - sudo apt-get -qq update
+        - sudo apt-get install -y libboost-test-dev
+        - sudo apt-get install -y swig
+      script:
+        - cd $BUILD_HOME
+        - cmake ../ -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON ..
+        - cmake --build .
+        - cd tests
+        - ctest
+        - cd $SWMM_HOME 
+        - pip install --src build/packages -r tools/requirements.txt
+        - tools/before-test.sh $TEST_HOME $SWMM_HOME/$BUILD_HOME/bin $TRAVIS_COMMIT
+        - tools/run-nrtest.sh -c -t $TEST_HOME -v $TRAVIS_COMMIT
+
     - os: osx
-      # name: 'osx'
+      name: 'osx'
       osx_image: xcode10
       language: generic
+      before_install:
+        - brew update
+        - brew install libomp
+      script:
+        - cd $BUILD_HOME
+        - cmake ../ -DBUILD_TESTS=ON .. 
+        - cmake --build .
+        - cd tests
+        - ctest
+        - cd $SWMM_HOME 
+
     - name: 'manylinux2010'
       sudo: required
       env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64
            PLAT=manylinux2010_x86_64
       services:
         - docker
-
+      before_install:
+        - docker pull $DOCKER_IMAGE
+      script:
+        - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/tools/build-wheels.sh
+        -ls wheelhouse/
 
 #compiler:
 #  - gcc
@@ -31,51 +61,11 @@ env:
     - SWMM_VERSION=""
     - GIT_RELEASE_DIR=GIT_RELEASE
 
-before_install:
-  - if [[ "$TRAVIS_JOB_NAME" == "osx" ]]; then
-      brew update ;
-      brew install libomp ;
-    fi
-  - if [[ "$TRAVIS_JOB_NAME" == "linux" ]]; then
-      sudo apt-get -qq update ;
-      sudo apt-get install -y libboost-test-dev ;
-      sudo apt-get install -y swig ;
-    fi
-  - if [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
-      docker pull $DOCKER_IMAGE;
-    fi
-
 #install:
 
 before_script:
   - mkdir -p $BUILD_HOME
   - mkdir -p $RELEASE_HOME
-
-script:
-  - if ! [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
-      cd $BUILD_HOME ;
-    fi
-  - if [[ "$TRAVIS_JOB_NAME" == "linux" ]]; then
-      cmake ../ -DBUILD_TESTS=ON -DBUILD_COVERAGE=ON .. ;
-    fi
-  - if [[ "$TRAVIS_JOB_NAME" == "osx" ]]; then
-      cmake ../ -DBUILD_TESTS=ON .. ;
-    fi
-  - if ! [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
-      cmake --build . ;
-      cd tests ;
-      ctest ;
-      cd $SWMM_HOME ;
-    fi
-  - if [[ "$TRAVIS_JOB_NAME" == "linux" ]]; then
-      pip install --src build/packages -r tools/requirements.txt ;
-      tools/before-test.sh $TEST_HOME $SWMM_HOME/$BUILD_HOME/bin $TRAVIS_COMMIT ;
-      tools/run-nrtest.sh -c -t $TEST_HOME -v $TRAVIS_COMMIT ;
-    fi
-  - if [[ "$TRAVIS_JOB_NAME" == "manylinux2010" ]]; then
-      docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/tools/build-wheels.sh ;
-      ls wheelhouse/ ;
-    fi
   
 deploy:
   provider: releases
