--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,23 +13,23 @@ matrix:
 
 environment:
   matrix:
-    # Python 3.6, as in travis.yml
-    # - job_name: "win32"
-    #   job_group: "std_build"
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #   GENERATOR: "Visual Studio 15 2017"
-    #   GROUP: "SUPPORTED"
-    #   BOOST_ROOT: "C:/Libraries/boost_1_67_0"
-    #   PLATFORM: "win32"
-    #   REF_BUILD_ID: "323_1"
-    # - job_name: "win64"
-    #   job_group: "std_build"
-    #   APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    #   GENERATOR: "Visual Studio 15 2017 Win64"
-    #   GROUP: "EXPERIMENTAL"
-    #   BOOST_ROOT: "C:/Libraries/boost_1_67_0"
-    #   PLATFORM: "win64"
-    #   REF_BUILD_ID: "323_2"
+    Python 3.6, as in travis.yml
+    - job_name: "win32"
+      job_group: "std_build"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      GENERATOR: "Visual Studio 15 2017"
+      GROUP: "SUPPORTED"
+      BOOST_ROOT: "C:/Libraries/boost_1_67_0"
+      PLATFORM: "win32"
+      REF_BUILD_ID: "323_1"
+    - job_name: "win64"
+      job_group: "std_build"
+      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+      GENERATOR: "Visual Studio 15 2017 Win64"
+      GROUP: "EXPERIMENTAL"
+      BOOST_ROOT: "C:/Libraries/boost_1_67_0"
+      PLATFORM: "win64"
+      REF_BUILD_ID: "323_2"
     - job_name: "win64_wheel"
       job_group: "wheel"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
