--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: python
 
-python:
-  - "3.6"
-  - "3.7"
-  - "3.8"
-
 matrix:
   include:
     # - os: 'linux'
@@ -45,6 +40,7 @@ matrix:
       name: 'osx wheel'
       osx_image: xcode10
       language: generic
+      python: "3.6"
       install:
         - brew update
         - brew install libomp
