--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,7 +13,7 @@
 #	       June 29, 2020
 # 
 
-cmake_minimum_required (VERSION 3.0)
+#cmake_minimum_required (VERSION 3.0)
 
 
 #Setup CMake to run tests
