Removing coupling library from CMakeLists.txt

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,29 +15,24 @@
 
 #cmake_minimum_required (VERSION 3.0)
 
-
 #Setup CMake to run tests
 enable_testing()
 
-
 # Sets for output directory for executables and libraries. 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
 
 if(UNIX)
     set(CMAKE_CXX_FLAGS "-std=c++11")
 endif(UNIX)
 
-
 #Prep ourselves for compiling boost
 find_package(Boost REQUIRED)
 include_directories (${Boost_INCLUDE_DIRS})
 
-
 # Test files are a separate source directory called tests
 file(GLOB TEST_SRCS . tests/test_*.cpp)
 
-add_library(coupling . /src/coupling.c)
+#add_library(coupling . /src/coupling.c)
 
 #Run through each source
 foreach(testSrc ${TEST_SRCS})
@@ -48,7 +43,7 @@ foreach(testSrc ${TEST_SRCS})
         add_executable(${testName} ${testSrc})
 
         #link to Boost libraries AND your targets and dependencies
-        target_link_libraries(${testName} ${Boost_LIBRARIES} swmm5 swmm-output coupling)
+        target_link_libraries(${testName} ${Boost_LIBRARIES} swmm5 swmm-output)
 
         #Finally add it to test execution - 
         #Notice the WORKING_DIRECTORY and COMMAND
