Changes in CMakeLists. txt and bug fixing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@
 #	       June 29, 2020
 # 
 
+#Setup CMake to run tests
+enable_testing()
+
 # SWMM LIBRARY
 cmake_minimum_required (VERSION 3.0.2)
 
@@ -30,9 +33,9 @@ option(BUILD_COVERAGE "Build library for coverage" OFF)
 # containing root CMakeLists.txt file.
 add_subdirectory(tools/swmm-output)
 
-IF (BUILD_TESTS)
+#IF (BUILD_TESTS)
     add_subdirectory(tests)
-ENDIF (BUILD_TESTS)
+#ENDIF (BUILD_TESTS)
 
 
 # Sets for output directory for executables and libraries.
