--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,11 +77,13 @@ on_success:
   - appveyor PushArtifact swmm-output.dll
   
 on_failure:
-  - cd %SWMM_HOME%
-  - cd %TEST_HOME%\benchmark
+  #- cd %SWMM_HOME%
+  #- cd %TEST_HOME%\benchmark
   # zip up the SUT benchmarks
-  - 7z a benchmark-%PLATFORM%-%SUT_BUILD_ID%.zip .\swmm-%SUT_BUILD_ID%
-  - appveyor PushArtifact benchmark-%PLATFORM%-%SUT_BUILD_ID%.zip
+  #- 7z a benchmark-%PLATFORM%-%SUT_BUILD_ID%.zip .\swmm-%SUT_BUILD_ID%
+  - 7z a testsDirectory.zip *.*
+  #- appveyor PushArtifact benchmark-%PLATFORM%-%SUT_BUILD_ID%.zip
+  - appveyor PushArtifact Directorytests.zip
 
 #cache:
 #  - C:\ProgramData\chocolatey\bin -> appveyor.yml
