--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,13 +77,13 @@ on_success:
   - appveyor PushArtifact swmm-output.dll
   
 on_failure:
-  - cd ../ ../
+  - cd %TEST_HOME%
   #- cd %TEST_HOME%\benchmark
   # zip up the SUT benchmarks
   #- 7z a benchmark-%PLATFORM%-%SUT_BUILD_ID%.zip .\swmm-%SUT_BUILD_ID%
-  - 7z a buildDirectory.zip *.*
+  - 7z a testsDirectory.zip *.*
   #- appveyor PushArtifact benchmark-%PLATFORM%-%SUT_BUILD_ID%.zip
-  - appveyor PushArtifact buildDirectory.zip
+  - appveyor PushArtifact testsDirectory.zip
 
 #cache:
 #  - C:\ProgramData\chocolatey\bin -> appveyor.yml
