--- a/appveyor.yml
+++ b/appveyor.yml
@@ -77,13 +77,14 @@ on_success:
   - appveyor PushArtifact swmm-output.dll
   
 on_failure:
+  - cd %SWMM_HOME%
   - cd %BUILD_HOME%
   #- cd %TEST_HOME%\benchmark
   # zip up the SUT benchmarks
   #- 7z a benchmark-%PLATFORM%-%SUT_BUILD_ID%.zip .\swmm-%SUT_BUILD_ID%
-  - 7z a testsDirectory.zip *.*
+  - 7z a projectDirectory.zip C:/projects/stormwater-management-model/*.*
   #- appveyor PushArtifact benchmark-%PLATFORM%-%SUT_BUILD_ID%.zip
-  - appveyor PushArtifact testsDirectory.zip
+  - appveyor PushArtifact projectDirectory.zip
 
 #cache:
 #  - C:\ProgramData\chocolatey\bin -> appveyor.yml
