--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-2022, ubuntu-22.04, macos-12]
+        os: [windows-2022, ubuntu-22.04, macos-latest]
         requirements: [requirements-swmm.txt]
         include:
           - os: windows-2022
@@ -58,7 +58,7 @@ jobs:
                 shell: bash
                 working-directory: ./ci-tools/linux
 
-          - os: macos-12
+          - os: macos-latest
             sys_pkgs: brew install libomp #boost
             boost_platform_version: 12
             boost_toolsit: clang
